--- a/Bai3.html
+++ b/Bai3.html
@@ -7,6 +7,41 @@
 <body>
 <script>
     //In tam giác vuông.Các góc vuông nằm ở các vị trí khác nhau
+    for (let i = 1; i <= 5; i++) {
+        for (let j = 1; j <= i; j++) {
+            document.write('* ');
+        }
+        document.write('<br>');
+    }
+    document.write('<br>');
+
+    for(let i = 5; i >= 1; i--) {
+        for(let j = 1; j <= i; j++) {
+            document.write('* ');
+        }
+        document.write('<br>');
+    }
+    document.write('<br>');
+
+    for(let i = 1; i <= 5; i++) {
+        for(let j = 1; j < i; j++) {
+            document.write('&ensp;');
+        }
+        for(let j = 5; j >= i; j--) {
+            document.write('*');
+        }
+        document.write('<br>');
+    }
+
+    for(let i = 0; i <= 5; i++) {
+        for(let j = 4; j >= 1; j--) {
+            document.write('&ensp;');
+        }
+        for(let j = 1; j <= i; j++) {
+            document.write('*');
+        }
+        document.write('<br>');
+    }
 </script>
 </body>
 </html>
